--- a/udemy_data_science/01_Python-for-Data-Analysis/pandas/Pandas Exercises/04.Ecommerce Purchases Exercise - Solutions.ipynb
+++ b/udemy_data_science/01_Python-for-Data-Analysis/pandas/Pandas Exercises/04.Ecommerce Purchases Exercise - Solutions.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<a href='http://www.pieriandata.com'> <img src='../../Pierian_Data_Logo.png' /></a>\n",
     "___\n",
-    "# Ecommerce Purchases Exercise\n",
+    "# Ecommerce Purchases Exercise - Solutions\n",
     "\n",
     "In this Exercise you will be given some Fake Data about some purchases done through Amazon! Just go ahead and follow the directions and try your best to answer the questions and complete the tasks. Feel free to reference the solutions. Most of the tasks can be solved in different ways. For the most part, the questions get progressively harder.\n",
     "\n",
@@ -26,7 +26,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
@@ -35,7 +37,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ecom = pd.read_csv('Ecommerce Purchases')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -214,7 +216,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,9 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -256,7 +258,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ecom.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,9 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -283,7 +285,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -310,14 +312,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].max()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -330,7 +332,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Purchase Price'].min()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -342,9 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -371,7 +373,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Language']=='en'].count()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,9 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -413,7 +415,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Job'] == 'Lawyer'].info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -427,9 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -444,7 +446,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['AM or PM'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -476,7 +478,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Job'].value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -488,9 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -504,7 +506,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom['Lot']=='90 WT']['Purchase Price']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -516,9 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -532,7 +534,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[ecom[\"Credit Card\"] == 4926535242672853]['Email'] "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,9 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -573,7 +575,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom[(ecom['CC Provider']=='American Express') & (ecom['Purchase Price']>95)].count()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -585,9 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -600,7 +602,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sum(ecom['CC Exp Date'].apply(lambda x: x[3:]) == '25')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -612,9 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -632,7 +634,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ecom['Email'].apply(lambda x: x.split('@')[1]).value_counts().head(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -658,9 +662,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
