--- a/udemy_data_science/01_Python-for-Data-Analysis/pandas/Pandas Exercises/03_Ecommerce Purchases Exercise .ipynb
+++ b/udemy_data_science/01_Python-for-Data-Analysis/pandas/Pandas Exercises/03_Ecommerce Purchases Exercise .ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<a href='http://www.pieriandata.com'> <img src='../../Pierian_Data_Logo.png' /></a>\n",
     "___\n",
-    "# Ecommerce Purchases Exercise - Solutions\n",
+    "# Ecommerce Purchases Exercise\n",
     "\n",
     "In this Exercise you will be given some Fake Data about some purchases done through Amazon! Just go ahead and follow the directions and try your best to answer the questions and complete the tasks. Feel free to reference the solutions. Most of the tasks can be solved in different ways. For the most part, the questions get progressively harder.\n",
     "\n",
@@ -21,10 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -32,13 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "ecom = pd.read_csv('Ecommerce Purchases')"
+    "ecom = pd.read_csv('Ecommerce Purchases.csv')"
    ]
   },
   {
@@ -50,15 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -213,7 +220,7 @@
        "4     24.140.33.94       es           77.82  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,10 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -258,12 +263,39 @@
       "Language            10000 non-null object\n",
       "Purchase Price      10000 non-null float64\n",
       "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 1.1+ MB\n"
+      "memory usage: 664.1+ KB\n"
      ]
     }
    ],
    "source": [
     "ecom.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<class 'pandas.core.frame.DataFrame'>\n",
+    "RangeIndex: 10000 entries, 0 to 9999\n",
+    "Data columns (total 14 columns):\n",
+    "Address             10000 non-null object\n",
+    "Lot                 10000 non-null object\n",
+    "AM or PM            10000 non-null object\n",
+    "Browser Info        10000 non-null object\n",
+    "Company             10000 non-null object\n",
+    "Credit Card         10000 non-null int64\n",
+    "CC Exp Date         10000 non-null object\n",
+    "CC Security Code    10000 non-null int64\n",
+    "CC Provider         10000 non-null object\n",
+    "Email               10000 non-null object\n",
+    "Job                 10000 non-null object\n",
+    "IP Address          10000 non-null object\n",
+    "Language            10000 non-null object\n",
+    "Purchase Price      10000 non-null float64\n",
+    "dtypes: float64(1), int64(2), object(11)\n",
+    "memory usage: 1.1+ MB"
    ]
   },
   {
@@ -275,24 +307,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50.34730200000025"
+       "50.347301999999999"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ecom['Purchase Price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "50.34730200000025"
    ]
   },
   {
@@ -304,10 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -315,7 +352,7 @@
        "99.989999999999995"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,10 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "99.989999999999995"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -337,7 +381,7 @@
        "0.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,10 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -380,13 +422,36 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom[ecom['Language']=='en'].count()"
+    "ecom[ecom['Language'] == 'en'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Address             1098\n",
+    "Lot                 1098\n",
+    "AM or PM            1098\n",
+    "Browser Info        1098\n",
+    "Company             1098\n",
+    "Credit Card         1098\n",
+    "CC Exp Date         1098\n",
+    "CC Security Code    1098\n",
+    "CC Provider         1098\n",
+    "Email               1098\n",
+    "Job                 1098\n",
+    "IP Address          1098\n",
+    "Language            1098\n",
+    "Purchase Price      1098\n",
+    "dtype: int64"
    ]
   },
   {
@@ -398,39 +463,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 30 entries, 470 to 9979\n",
-      "Data columns (total 14 columns):\n",
-      "Address             30 non-null object\n",
-      "Lot                 30 non-null object\n",
-      "AM or PM            30 non-null object\n",
-      "Browser Info        30 non-null object\n",
-      "Company             30 non-null object\n",
-      "Credit Card         30 non-null int64\n",
-      "CC Exp Date         30 non-null object\n",
-      "CC Security Code    30 non-null int64\n",
-      "CC Provider         30 non-null object\n",
-      "Email               30 non-null object\n",
-      "Job                 30 non-null object\n",
-      "IP Address          30 non-null object\n",
-      "Language            30 non-null object\n",
-      "Purchase Price      30 non-null float64\n",
-      "dtypes: float64(1), int64(2), object(11)\n",
-      "memory usage: 3.5+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Address             30\n",
+       "Lot                 30\n",
+       "AM or PM            30\n",
+       "Browser Info        30\n",
+       "Company             30\n",
+       "Credit Card         30\n",
+       "CC Exp Date         30\n",
+       "CC Security Code    30\n",
+       "CC Provider         30\n",
+       "Email               30\n",
+       "Job                 30\n",
+       "IP Address          30\n",
+       "Language            30\n",
+       "Purchase Price      30\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom[ecom['Job'] == 'Lawyer'].info()"
+    "ecom[ecom['Job']=='Lawyer'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<class 'pandas.core.frame.DataFrame'>\n",
+    "Int64Index: 30 entries, 470 to 9979\n",
+    "Data columns (total 14 columns):\n",
+    "Address             30 non-null object\n",
+    "Lot                 30 non-null object\n",
+    "AM or PM            30 non-null object\n",
+    "Browser Info        30 non-null object\n",
+    "Company             30 non-null object\n",
+    "Credit Card         30 non-null int64\n",
+    "CC Exp Date         30 non-null object\n",
+    "CC Security Code    30 non-null int64\n",
+    "CC Provider         30 non-null object\n",
+    "Email               30 non-null object\n",
+    "Job                 30 non-null object\n",
+    "IP Address          30 non-null object\n",
+    "Language            30 non-null object\n",
+    "Purchase Price      30 non-null float64\n",
+    "dtypes: float64(1), int64(2), object(11)\n",
+    "memory usage: 3.5+ KB"
    ]
   },
   {
@@ -444,10 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -457,13 +544,26 @@
        "Name: AM or PM, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ecom.groupby('AM or PM').count()\n",
+    "\n",
     "ecom['AM or PM'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PM    5068\n",
+    "AM    4932\n",
+    "Name: AM or PM, dtype: int64"
    ]
   },
   {
@@ -475,29 +575,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Interior and spatial designer    31\n",
-       "Lawyer                           30\n",
-       "Social researcher                28\n",
-       "Purchasing manager               27\n",
-       "Designer, jewellery              27\n",
+       "Interior and spatial designer        31\n",
+       "Lawyer                               30\n",
+       "Social researcher                    28\n",
+       "Purchasing manager                   27\n",
+       "Research officer, political party    27\n",
        "Name: Job, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ecom['Job'].value_counts().head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Interior and spatial designer    31\n",
+    "Lawyer                           30\n",
+    "Social researcher                28\n",
+    "Purchasing manager               27\n",
+    "Designer, jewellery              27\n",
+    "Name: Job, dtype: int64"
    ]
   },
   {
@@ -509,10 +621,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -521,13 +631,23 @@
        "Name: Purchase Price, dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom[ecom['Lot']=='90 WT']['Purchase Price']"
+    "ecom[ecom['Lot'] == '90 WT']['Purchase Price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "513    75.1\n",
+    "Name: Purchase Price, dtype: float64"
    ]
   },
   {
@@ -539,10 +659,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 56,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -551,13 +669,23 @@
        "Name: Email, dtype: object"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom[ecom[\"Credit Card\"] == 4926535242672853]['Email'] "
+    "ecom[ecom['Credit Card'] == 4926535242672853]['Email']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1234    bondellen@williams-garza.com\n",
+    "Name: Email, dtype: object"
    ]
   },
   {
@@ -569,10 +697,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -594,13 +720,36 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom[(ecom['CC Provider']=='American Express') & (ecom['Purchase Price']>95)].count()"
+    "ecom[(ecom['CC Provider'] == 'American Express') & (ecom['Purchase Price'] > 95)].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Address             39\n",
+    "Lot                 39\n",
+    "AM or PM            39\n",
+    "Browser Info        39\n",
+    "Company             39\n",
+    "Credit Card         39\n",
+    "CC Exp Date         39\n",
+    "CC Security Code    39\n",
+    "CC Provider         39\n",
+    "Email               39\n",
+    "Job                 39\n",
+    "IP Address          39\n",
+    "Language            39\n",
+    "Purchase Price      39\n",
+    "dtype: int64"
    ]
   },
   {
@@ -612,10 +761,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 98,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -623,13 +770,26 @@
        "1033"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(ecom['CC Exp Date'].apply(lambda x: x[3:]) == '25')"
+    "ecom[ecom['CC Exp Date'].str[-2:].apply(lambda x : int(x)) == 25].count()\n",
+    "\n",
+    "# ecom['CC Exp Date'].head()\n",
+    "\n",
+    "sum(ecom['CC Exp Date'].apply(lambda x : x[3:]) == '25')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1033"
    ]
   },
   {
@@ -641,10 +801,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 104,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -657,13 +815,27 @@
        "Name: Email, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecom['Email'].apply(lambda x: x.split('@')[1]).value_counts().head(5)"
+    "ecom['Email'].apply(lambda x : x.split('@')[1]).value_counts().head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hotmail.com     1638\n",
+    "yahoo.com       1616\n",
+    "gmail.com       1605\n",
+    "smith.com         42\n",
+    "williams.com      37\n",
+    "Name: Email, dtype: int64"
    ]
   },
   {
@@ -690,9 +862,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
